@@ -19,9 +19,13 @@
  *  <pelzlpj@eecs.umich.edu>.
  *)
 
+(* gsl_assist.ml
+ *
+ * Contains a bunch of helper functions that make ocamlgsl a bit easier
+ * to work with. *)
+
 
 (* simplifying functions for use with ocamlgsl bindings *)
-
 let cmpx_of_int i   = {Complex.re=Big_int.float_of_big_int i; Complex.im=0.0}
 let cmpx_of_float f = {Complex.re=f; Complex.im=0.0}
 let cmat_of_fmat fm =
@@ -51,6 +55,16 @@ let one_norm mat =
 
 
 
+(* solve a complex linear system using LU decomposition *)
+let solve_complex_LU ?(protect=true) mat b =
+  let mA = Gsl_vectmat.cmat_convert ~protect mat in
+  let vB = (`CV (Gsl_vector_complex.copy b)) in
+  let (len, _) = Gsl_vectmat.dims mA in
+  let p = Gsl_permut.create len in
+  let _ = Gsl_linalg.complex_LU_decomp mA p in
+  let x = Gsl_vector_complex_flat.create len in
+  Gsl_linalg.complex_LU_solve mA p vB (`CVF x);
+  Gsl_vector_complex_flat.to_complex_array x
 
 
 
