@@ -309,6 +309,7 @@ let operation_of_string command_str =
    |"function_ceiling"              -> (Function Ceiling)
    |"function_to_int"               -> (Function ToInt)
    |"function_to_real"              -> (Function ToFloat)
+   |"function_solve_linear"         -> (Function SolveLin)
    |"edit_begin_integer"            -> (Edit BeginInteger)
    |"edit_complex"                  -> (Edit BeginComplex)
    |"edit_matrix"                   -> (Edit BeginMatrix)
