@@ -3,6 +3,9 @@ Orpie ChangeLog
 
 v1.1
 
+   2004-04-14        Added a linear system solver that avoids
+                     computation of an inverse matrix.
+
    2004-04-13        Created a parser and associated routines that
                      enable Orpie to read data entered in an external
                      editor.
